syntax="proto2";

package protocol;

import "hero.proto";
import "soldier.proto";

message MapGridInfo
{
	required int32 x = 1;
	required int32 y = 2;
	required int32 base_type = 3;
	required int32 obj_type = 4;
	required int64 id = 5;
}

message MapInfo
{
	repeated MapGridInfo map_infos = 1;
	repeated int32 map_point_list = 2;
	repeated int32 map_point_active = 3;
}

message MsgMapRefreshReq
{
	repeated MapGridInfo map_infos = 1;
	repeated int32 map_point_active = 2;
}

message MsgMapRefreshRet
{
	required int32 retcode = 1;
}

message MsgMapUpdateNotify
{
	repeated MapGridInfo map_infos = 1;
}

message MsgMapUpdatePointNotify
{
	required MapGridInfo map_info = 1;
}

message MsgMapRemoveObstacleReq
{
	required int32 scheme_id = 1;
	required int32 pos_x = 2;
	required int32 pos_y = 3;
}

message MsgMapRemoveObstacleRet
{
	required int32 retcode = 1;
}

message MsgMapUnLockPointReq
{
	required int32 point_id = 1;
}

message MsgMapUnLockPointRet
{
	required int32 retcode = 1;
	required int32 point_id = 2;
}